be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-backend
  template:
    metadata:
      labels:
        app: chatbot-backend
    spec:
      containers:
        - name: chatbot-backend
          image: 861276075965.dkr.ecr.eu-north-1.amazonaws.com/chatbot-react:v2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: chatbot-backend
