fe-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-frontend
  template:
    metadata:
      labels:
        app: chatbot-frontend
    spec:
      containers:
        - name: chatbot-frontend
          image: 861276075965.dkr.ecr.eu-north-1.amazonaws.com/chatbot-react:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: chatbot-frontend
